tests/rawptr_implicit_to_ptr_bad.sl
fn main() {
	var opaque rawptr = null
	var p      *int   = opaque
	_ = p
}
